Fix errors in specification comments
    Specification comments are used to auto-generate swagger.json

    There were missing fields in the specification which generated a
    swagger.json without a type for return value

    The license name was also missing

Ref:e50d253eee209878d0a7b875a9d470f9d990016d
